--- a/style.css
+++ b/style.css
@@ -6,8 +6,26 @@ body {
     color: #0a0a0a;
     letter-spacing: 2px;
     line-height: 1.2;
-    background-color: #f38c32;
+    background: linear-gradient(to right, #f38c32, #9B59B6);
+    background-size: 600% 600%;
+    animation: gradientAnimation 9s ease infinite;
 }
+
+a:hover {
+    cursor: url('./assets/cursor.png'), auto;
+  }
+
+@keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 
 .wrapper {
     max-width: 100%;
@@ -25,6 +43,11 @@ body {
 
 .header__title {
     text-align: center;
+    transition: transform 0.3s ease-in-out;
+}
+
+.header__title:hover {
+    transform: scale(1.02);
 }
 
 .header__status {
@@ -35,7 +58,7 @@ body {
 
 .header__status-link {
     text-decoration: none;
-    color: inherit;
+    color: inherit;    
 }
 
 .header__status::after {
@@ -117,12 +140,21 @@ body {
     align-items: center;
     text-decoration: none;
     color: inherit;
+    transition: transform 0.3s ease-in-out;
+}
+
+.footer__contact-link:hover {
+    transform: scale(1.02);
 }
 
 .footer__contact-icon {
     width: 12px;
     margin-right: 4px;
 }
+
+.main__about, .main__create, .main__go {
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25), 0 16px 16px rgba(0, 0, 0, 0.22);
+  }
 
 @media (max-width: 425px) {
 
